# ailonk-search

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_EN.md  TODO.md
.github/workflows/: release.yml
docs/: google-account-chooser-interaction.md
docs/archive/: TASK_PLAN.md
docs/bugs/: 001-chrome-reconnect.md
docs/examples/: 01-stock-research.md  02-tech-docs.md  03-product-research.md  04-news-tracking.md  05-industry-report.md  06-company-comparison.md  07-deep-research.md  08-tool-testing.md  README.md
npm/: install.js  package.json  run.js
src/: cache.rs  cli.rs  main.rs
src/browser/: interaction.rs  manager.rs  mod.rs  pool.rs  profile.rs
src/browser/interaction/: auth.rs  captcha.rs  click.rs  consent.rs  input.rs  mod.rs  navigate.rs  popup.rs  popup_flow.rs  signals.rs  target_watcher.rs
src/commands/: cleanup.rs  mod.rs  serve.rs  setup.rs  sync.rs  test.rs
src/extract/: content.rs
src/search/: bing.rs  duckduckgo.rs  engine.rs  google.rs  mod.rs
src/server/: authorize.rs  mod.rs  popup_handler.rs  tools.rs
tests/: mcp_integration.rs
