[package]
name = "ailonk-search"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Chrome CDP-based MCP Server for web search and content extraction"

[dependencies]
# --- MCP Server ---
rmcp = { version = "1.7", features = ["server", "macros", "schemars"] }

# --- Chrome CDP (stealth) ---
eoka = "0.3"

# --- Async ---
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# --- HTML 处理 ---
dom_smoothie = { version = "0.18", features = ["serde"] }
scraper = "0.27"

# --- 序列化 ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# --- CLI ---
clap = { version = "4", features = ["derive"] }

# --- 日志 ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- 错误处理 ---
anyhow = "1"

# --- Encoding ---
base64 = "0.22"

# --- 缓存 ---
moka = { version = "0.12", features = ["future"] }

# --- 搜索引擎 ---
async-trait = "0.1"
urlencoding = "2"
url = "2"
rand = "0.9"
dirs = "6"
regex = "1.12.4"

[dev-dependencies]
rmcp = { version = "1.7", features = ["client", "transport-child-process"] }
