[package]
name = "ailonk-search"
version = "0.1.7"
edition = "2021"
rust-version = "1.91"
description = "Chrome CDP-based MCP Server for web search and content extraction"
license = "MIT"
repository = "https://github.com/lk19940215/ailonk-search"
homepage = "https://github.com/lk19940215/ailonk-search"
keywords = ["mcp", "chrome", "search", "cdp", "ai"]

[dependencies]
# --- MCP Server ---
rmcp = { version = "1.7", features = ["server", "macros", "schemars"] }

# --- Chrome CDP (stealth) ---
eoka = "0.3"

# --- Async ---
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# --- 序列化 ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# --- CLI ---
clap = { version = "4", features = ["derive"] }

# --- 日志 ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- 错误处理 ---
anyhow = "1"

# --- Encoding ---
base64 = "0.22"

# --- 缓存 ---
moka = { version = "0.12", features = ["future"] }

# --- 搜索引擎 ---
async-trait = "0.1"
urlencoding = "2"
url = "2"
rand = "0.9"
dirs = "6"
rs-trafilatura = "0.2.2"

[dev-dependencies]
rmcp = { version = "1.7", features = ["client", "transport-child-process"] }
